--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -31,7 +31,7 @@
       <%= render 'shared/search_products' %>
       <div class="col-md-3">
         <%= link_to user_carts_path, class: 'cart' do %>
-          <i class="bi bi-cart3"></i> <strong>R$ 150,00</strong>
+          <i class="bi bi-cart3"></i> <strong><%= number_to_currency(current_user&.carts&.where(service_order: nil)&.pending&.last&.product&.price || 0) %></strong>
         <% end %>
       </div>
     </div>
